# LearningOpenGL

./: .gitignore  CMakeLists.txt  README.md  run.bat
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: Main.cpp
src/graphic/: Buffer.cpp  Buffer.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h
src/shaders/: fragment.frag  vertex.vert
src/window/: Window.cpp  Window.h
